<resources>
    <string name="app_name">SimpleProject</string>
    <string name="my_deliveries">My Deliveries</string>
    <string name="string_from">From</string>
    <string name="string_to">To</string>
    <string name="string_data_sample">XXXXXX</string>
    <string name="int_data_sample">$85.00</string>
    <string name="string_btn_add_to_favourites">Add To Favourite</string>
    <string name="string_delivery_fee">Delivery Fee</string>
    <string name="string_goods_to_deliver">Goods to deliver</string>

</resources>