<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recycler_cards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_get_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        android:padding="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_from"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txt_item_from"
            android:layout_width="200dp"
            android:layout_height="18dp"
            android:ellipsize="end"
            android:paddingLeft="40dp"
            android:text="@string/string_data_sample"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="35dp"
            android:text="@string/string_to"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txt_item_to"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:paddingLeft="40dp"
            android:paddingTop="35dp"
            android:text="@string/string_data_sample"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/img_get_fab"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@color/colorAccent"
            android:src="@drawable/abc_vector_test"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingTop="35dp"
            android:text="@string/int_data_sample"
            android:textSize="15dp" />


    </RelativeLayout>


</LinearLayout>
