<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainActivityDetail">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:background="@color/cardview_shadow_start_color"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_from"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/detail_txt_from"
                android:layout_marginRight="25dp"
                android:text="@string/string_data_sample"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/string_to"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/detail_txt_to"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:text="@string/string_data_sample"
                android:textSize="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:background="@color/cardview_shadow_start_color"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_goods_to_deliver"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:id="@+id/detail_img"
                android:background="@color/colorPrimary"
                android:text="To"
                android:textSize="15dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:background="@color/cardview_shadow_start_color"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_delivery_fee"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/detail_txt_delivery_fee"
                android:paddingRight="25dp"
                android:text="@string/string_data_sample"
                android:textSize="15dp" />

        </RelativeLayout>


    <Button
        android:id="@+id/detail_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:text="@string/string_btn_add_to_favourites"
        android:textColor="#ffffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>